...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/item_selecao_produto_descricao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Produto 001" />

            <TextView
                android:id="@+id/item_selecao_produto_preco"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/colorMoney"
                android:textSize="18sp"
                android:textStyle="bold"
...
