...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/layout_comanda_screen_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/colorMoney"
        android:textSize="24sp"
...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_itens_comanda"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/layout_comanda_screen_botao_adicionar_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_comanda_screen_total"
        tools:listitem="@layout/item_comanda" />

    <Button
...
